# software-optimization-homework

./: PersonalInformationSystem.sln  README.md
PersonalInformationSystem/: BenchmarkExecutor.h  DataGenerator.cpp  ManagementSystem.hpp  PersonalInformationSystem.vcxproj.filters
PersonalInformationSystem/x64/Debug/: PersonalInformationSystem.ilk
PersonalInformationSystem/x64/Debug/Personal.940631b2.tlog/: CL.read.1.tlog  CL.write.1.tlog  PersonalInformationSystem.lastbuildstate  link.command.1.tlog
PersonalInformationSystem/x64/Release/: PersonalInformationSystem.exe.recipe  PersonalInformationSystem.iobj
homework 1/PersonalInformationSystem/: BenchmarkExecutor.cpp  BenchmarkExecutor.h  DataGenerator.h  Logger.cpp  Logger.h  ManagementSystem.hpp  PersonalInformationSystem.vcxproj  defines.h  main.cpp
homework 2/LoopUnroll/: Executor.cpp  Executor.h  Logger.cpp  Logger.h  LoopUnroll.vcxproj.filters  main.cpp
homework 3/: IncomeTaxCalculator.sln
homework 3/IncomeTaxCalculator/: DataGenerator.cpp  DataGenerator.h  Executor.cpp  Executor.h  IncomeTaxCalculator.vcxproj  IncomeTaxCalculator.vcxproj.filters  Logger.cpp  Logger.h  main.cpp
homework 4/LoopUnrollAndSimd/: LoopUnroll.sln
homework 4/LoopUnrollAndSimd/LoopUnroll/: Executor.cpp  Executor.h  Logger.cpp  LoopUnroll.vcxproj  main.cpp
homework 4/MatrixPartition/: MatrixPartition.sln
homework 4/MatrixPartition/MatrixPartition/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Executor.cpp  Executor.h  Logger.cpp  Logger.h  MatrixPartition.vcxproj  MatrixPartition.vcxproj.filters  main.cpp
(+13 files in other folders)
